# msp430_delta_robot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Analysis/Servo/: kekbotorg_16us_track.txt
Analysis/Servo/notebook/: kekbot_step_10us.csv  servo_analysis.ipynb
Analysis/Servo/tracker_files/: hitec_move_5us.trk  hitec_move_8us.trk  hitec_step_1us.trk  hitec_step_3us.trk  hitec_step_4us.trk  hitec_step_5us.trk  kekbot_step_10us.trk  kekbot_step_5us.trk
Analysis/Test/: Test.ino
Analysis/Testsimple/: Testsimple.ino
Design/: drawing_overview.dxf  proto_1.dxf  proto_1_sheet_1.dxf
Embedded/: CMakeLists.txt  CharServoMessage.cpp  CharServoMessage.h  Makefile  PWMServo.cpp  PWMServo.h  StringServoMessage.cpp  StringServoMessage.h  main.cpp
Embedded/cmake/: msp430.cmake
Embedded_minimal/: CMakeCache.txt  CMakeLists.txt  Makefile  PWMServo.cpp  PWMServo.h  cmake_install.cmake  main.cpp
Host/: CMakeLists.txt  Makefile  main.cpp
algorithms/: CombVec.m  calc_helper.py  delta_calcAngleYZ.m  delta_calcForward.m  delta_calcInverse.m  delta_resolution.m  delta_test.m  deltarobot.py  parkingspace  sandbox.m  sandbox.py  sphere_intersect.py
energia/buildin_PWM_test/: buildin_PWM_test.ino
hostBPy/: anim.blend  anim.blend1  host_app.py  host_gui.blend  host_gui.blend1
hostPy/: DeltaDriver.py  DeltaRobot.py  easyJson.py  frontend.html  serialTest.py  serialTest_minimal.py
